config/base/common/network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all-traffic
  namespace: system
spec:
  podSelector: { }
  policyTypes:
    - Ingress
    - Egress
